src/test/deca/context/invalid/created/cast_compatible/subClass_2.deca
// Description:
//      Cast d'une sous classe
// Resultats:
//      Ligne 9 :  incompatible class types

class X{}

{
    X b = new Object();
}